# openEC

./: .gitignore  README.md  pyproject.toml
cookiecutter/extension/: cookiecutter.json  {{cookiecutter.extension_name}}.py
cookiecutter/provider/: cookiecutter.json
cookiecutter/provider/{{cookiecutter.provider_name}}/: __init__.py
openec/: __init__.py
openec_cli/: __init__.py  main.py
openec_extensions/: __init__.py  analytics.py  customers.py  inventory.py  marketing.py  orders.py  pricing.py  products.py
openec_platform/: __init__.py
openec_platform/core/: __init__.py  api.py  command_runner.py  oecject.py  provider_interface.py  router.py
openec_platform/models/: __init__.py  analytics.py  customers.py  inventory.py  marketing.py  orders.py  pricing.py  products.py
openec_providers/: __init__.py
openec_providers/demo/: __init__.py  fetchers.py
